--- a/src/app/telapai/telapai.html
+++ b/src/app/telapai/telapai.html
@@ -1,1 +1,11 @@
-<p>telapai works!</p>
+<div class="row">
+    <div class="col-md-3">
+        <ul>
+            <li><a routerLink="telafilho1" routerLinkActive="active">Filho 1</a></li>
+            <li><a routerLink="telafilho2" routerLinkActive="active">Filho 2</a></li>
+        </ul>
+    </div>
+    <div class="col-md-9">
+        <router-outlet></router-outlet>
+    </div>
+</div>
